game logic migration created new game bug so I squashed that

--- a/app/assets/css/result.css
+++ b/app/assets/css/result.css
@@ -2235,3 +2235,6 @@ ul {
   background-color: #f1f1f1;
   color: #263238;
 }
+md-card {
+  margin: 0;
+}
