--- a/app/assets/less/main.less
+++ b/app/assets/less/main.less
@@ -39,3 +39,7 @@
 	background-color: @flat-white;
 	color: #263238;
 }
+
+md-card {
+	margin: 0;
+}
